tests/cases/scc/error/0027-constoverflow.c.res
./tests/cases/scc/error/0027-constoverflow.c:4:34:	warning: signed integer overflow.
exit code 0
